plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral()
//    mavenLocal()
    jcenter()
}

allprojects {
    repositories {
        maven { url 'https://jitpack.io' }
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'com.github.Minecraftian14:MyLOGGER:master-SNAPSHOT'
//    implementation 'com.github.jitpack:gradle-simple:1.1'
}
